# ag-services

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  config.py  env-example  main.py  pyproject.toml
.github/workflows/: ci.yml  pytest.yml
alembic/: env.py
alembic/versions/: 20240103_1942_new.py  20240123_1749_alter_name.py  20240123_1938_alter_name_field.py  20240209_1512_add_field_coordinate.py  20240328_1736_add_geostream_sensors.py  20240425_1833_add_drs_yeild_table.py  20240425_1833_add_drs_yield_table.py  20240606_1858_alter_drs_table_yeild_amount_to_crop_.py  20240606_1858_alter_drs_table_yield_amount_to_crop_.py  20240607_1929_alter_sensor_table_to_add_type.py  20240722_1716_add_crop_rotation_table.py  20240722_1729_change_foreign_key_name.py  20240726_1624_alter_crop_rotation_table_and_add_.py  20240924_1355_add_crop_field_to_crop_rotation_table.py
app/: main.py
app/api/: deps.py  router.py
app/api/endpoints/: __init__.py  crop_rotation_yield.py  drs_yield.py  farms.py  fields.py  research.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_crop_rotation.py  crud_drs_yield.py  crud_farm.py  crud_fertilizer.py  crud_field.py  crud_research.py  crud_sensor.py
app/db/: base.py  init_db.py
app/models/: __init__.py  crop_rotation.py  drs_yeild.py  drs_yield.py  farm.py  fertilzer.py  field.py  research.py  sensor.py
app/routers/: field.py  item.py  model.py  user.py
app/schemas/: __init__.py  crop_rotation.py  drs_yield.py  farm.py  fertilizer.py  field.py  research.py  sensor.py
app/tests/api/: test_crop_rotation_yield.py  test_drs_yield.py  test_farm.py  test_field.py  test_main.py  test_research.py
app/utils/: create_env_file.py  db.py
routers/: model.py  user.py
scripts/: create_env_file.sh  import_data.sh  lint.sh  migrations_create.sh  migrations_forward.sh  migrations_reverse.sh  run_dev_server.sh  run_tests.sh  run_tests_coverage.sh
test_data/: data.json
test_data/shapefiles/farm_a/: farm_a.dbf  farm_a.shp  farm_a.shx
test_data/shapefiles/farm_b/: farm_b.dbf  farm_b.shp  farm_b.shx
test_data/shapefiles/farm_c/: farm_c.dbf  farm_c.shp  farm_c.shx
test_data/shapefiles/farm_d/: farm_d.dbf  farm_d.shp  farm_d.shx
