[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Diego Calderon <diegoac2@illinois.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
databases = "^0.5.5"
matplotlib = {version = ">=3.2.2", optional = true}
opencv-python = {version = ">=4.5.5.62", optional = true}
numpy = {version = ">=1.18.5", optional = true}
Pillow = {version = ">=7.1.2", optional = true}
PyYAML = {version = ">=5.3.1", optional = true}
requests = {version = ">=2.23.0", optional = true}
scipy = {version = ">=1.4.1", optional = true}
torch = {version = ">=1.7.0", optional = true}
torchvision = {version = ">=0.8.1", optional = true}
tensorboard = {version = ">=2.4.1", optional = true}
pandas = {version = ">=1.1.4", optional = true}
seaborn = {version = ">=0.11.0", optional = true}
thop = {version = "^0.0.31", optional = true}
psycopg2 = "^2.9.3"
GeoAlchemy2 = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
