[tool.poetry]
name = "direct4ag-api"
version = "0.1.0"
description = ""
authors = ["Christopher Navarro <cmnavarr@illinois.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
SQLAlchemy = {extras = ["mypy"], version = "~1.4"}
passlib = {extras = ["bcrypt"], version = "~1.7"}
pydantic = "^1.9.0"
python-dotenv = ">=0.10.3"
python-multipart = "~0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
